--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReadBooks5",
+  "name": "EvernoteWPF-Gust-Server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
